--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==2.0.12
 cryptography==37.0.2
 h11==0.13.0
 idna==3.3
+lxml==4.9.1
 multidict==6.0.2
 nextcord==2.0.0a3
 numpy==1.23.0
